--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<!--This file is provided by Socket.io when in server.js when it listens to the app-->
 	<script src="http://localhost:3000/socket.io/socket.io.js"></script>
 </head>
 <body>
