--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,14 @@
 <head>
 	<!--This file is provided by Socket.io when in server.js when it listens to the app-->
 	<script src="http://localhost:3000/socket.io/socket.io.js"></script>
+	<script type="text/javascript">
+		var socket = io.connect('http://localhost:3000');
+		//Custom socket event called 'entrance'
+		//When server-side javascript emits the entrance event, it will be sending a response that we pass to the data arg.
+		socket.on("entrance", function  (data) {
+			document.write('<p>' + data.message + '</p>');
+		});
+	</script>
 </head>
 <body>
 
